Fix width overflow for h3

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -41,7 +41,6 @@ h3 {
     color: White;
     font-weight: normal;
     font-size: 16px;
-    width: 100%;
     height: auto;
     padding: 3px;
     background: $yorker-orange;
